--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,15 @@ authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">3.10, <=3.10.8"
+vpython = "^7.6.4"
+numpy = "^1.24.3"
+scipy = "^1.10.1"
+control = "^0.9.3.post2"
 
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
