--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ control = "^0.9.3.post2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.2.0"
+mkdocs = "^1.4.3"
 
 [build-system]
 requires = ["poetry-core"]
