--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ autobahn==23.1.2 ; python_full_version > "3.10.0" and python_full_version <= "3.
 backcall==0.2.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 beautifulsoup4==4.12.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 bleach==6.0.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+certifi==2023.5.7 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 cffi==1.15.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 charset-normalizer==3.1.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
-colorama==0.4.6 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8" and sys_platform == "win32"
+click==8.1.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+colorama==0.4.6 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 comm==0.1.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 contourpy==1.0.7 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 control==0.9.3.post2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
@@ -28,6 +30,8 @@ fastjsonschema==2.16.3 ; python_full_version > "3.10.0" and python_full_version 
 fonttools==4.39.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 fqdn==1.5.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 frozenlist==1.3.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+ghp-import==2.1.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+griffe==0.27.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 hyperlink==21.0.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 idna==3.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 ipykernel==6.23.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
@@ -51,10 +55,18 @@ jupyter==1.0.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10
 jupyterlab-pygments==0.2.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 jupyterlab-widgets==3.0.7 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 kiwisolver==1.4.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+markdown==3.3.7 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 markupsafe==2.1.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 matplotlib-inline==0.1.6 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 matplotlib==3.7.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mergedeep==1.3.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 mistune==2.0.5 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mkdocs-autorefs==0.4.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mkdocs-material-extensions==1.1.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mkdocs-material==9.1.11 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mkdocs==1.4.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mkdocstrings-python==1.0.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+mkdocstrings==0.21.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 multidict==6.0.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 nbclassic==1.0.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 nbclient==0.7.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
@@ -78,16 +90,20 @@ ptyprocess==0.7.0 ; python_full_version > "3.10.0" and python_full_version <= "3
 pure-eval==0.2.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pycparser==2.21 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pygments==2.15.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+pymdown-extensions==9.11 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pyparsing==3.0.9 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pyrsistent==0.19.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 python-dateutil==2.8.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 python-json-logger==2.0.7 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pywinpty==2.0.10 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8" and os_name == "nt"
+pyyaml-env-tag==0.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pyyaml==6.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 pyzmq==25.0.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 qtconsole==5.4.3 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 qtpy==2.3.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+regex==2023.5.5 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+requests==2.30.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 rfc3339-validator==0.1.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 rfc3986-validator==0.1.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 scipy==1.10.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
@@ -104,7 +120,9 @@ tornado==6.3.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10
 traitlets==5.9.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 txaio==23.1.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 uri-template==1.2.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+urllib3==2.0.2 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 vpython==7.6.4 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
+watchdog==3.0.0 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 wcwidth==0.2.6 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 webcolors==1.13 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
 webencodings==0.5.1 ; python_full_version > "3.10.0" and python_full_version <= "3.10.8"
