--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Documentação Labvirtual
+site_name: Documentação Python Labvirtual
 
 repo_url: https://github.com/raphateixeira/LabVirtual
 repo_name: labvirtual de Controle
