--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "labvirtual"
-version = "0.3.16"
+version = "0.3.18"
 description = "Biblioteca de simulação gráfica 3D de ambientes para estudo de controle de sistema."
 authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">3.10, <=3.10.8"
+python = ">=3.8, <=3.10.8"
 vpython = "^7.6.4"
 numpy = "^1.24.3"
 scipy = "^1.10.1"
